--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "food",
     "slug": "food",
+    "sdkVersion": "20.0.0",
     "platforms": [
       "ios",
       "android",
